# jsonresume-to-linkedin

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
jsonresume_to_linkedin/: __init__.py
