[tool.poetry]
name = "jsonresume-to-linkedin"
version = "0.1.0"
description = "Sync a JSON Resume profile to LinkedIn."
authors = ["Mark Bundschuh <mark@mbund.dev>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
linkedin-api = { git = "https://github.com/tomquirk/linkedin-api.git" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jsonresume-to-linkedin = "jsonresume_to_linkedin:main"
